# spam_detector

./: .gitignore  README.md  pyproject.toml
app/: 1_accueil.py  2_exploration.py  3_resultats.py  4_demo.py  main.py
data/processed/: test.csv  train.csv  train_augmented.csv  val.csv
docs/: data_pipeline.puml  model_architectures.puml
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_model_simple.ipynb  04_transfer_learning.ipynb  05_comparison.ipynb  spam-detection_DL.ipynb
scripts/: export_vocab.py
