[project]
name = "spam-detector"
version = "0.1.0"
description = "AT&T SMS Spam Detector using Deep Learning"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyter",
    "ipykernel",
    "tqdm",
    "streamlit",
    "plotly",
    "accelerate>=1.13.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio",
    "transformers",
    "datasets>=3.0",
    "torchinfo",
    "pip>=26.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
docstring-code-format = true
